objects/Account.object
<CustomObject>
    <fields>
        <fullName>InstitutionType__c</fullName>
        <label>Institution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Akutklinik</fullName>
                </value>
                <value>
                    <fullName>alle</fullName>
                </value>
                <value>
                    <fullName>Ambulanter Pflegedienst</fullName>
                </value>
                <value>
                    <fullName>Ambulanz</fullName>
                </value>
                <value>
                    <fullName>Einzelpraxis</fullName>
                </value>
                <value>
                    <fullName>Gemeinschaftspraxis</fullName>
                </value>
                <value>
                    <fullName>Haus der Grund- und Regelversorgung</fullName>
                </value>
                <value>
                    <fullName>Haus der Maximalversorgung</fullName>
                </value>
                <value>
                    <fullName>Medizinisches Versorgungszentrum</fullName>
                </value>
                <value>
                    <fullName>Pflegeheim</fullName>
                </value>
                <value>
                    <fullName>Rehaklinik</fullName>
                </value>
                <value>
                    <fullName>Rehaklinik mit Akutbereich</fullName>
                </value>
                <value>
                    <fullName>Rettungsdienst</fullName>
                </value>
                <value>
                    <fullName>Schwerpunktkrankenhaus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Owner_LV__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner_LV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressCo__c</fullName>
        <label>Billing Address c/o</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionStreet__c</fullName>
        <label>Commission Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCentreNumber__c</fullName>
        <externalId>true</externalId>
        <label>Cost Centre Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DigitalSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingAddressCo__c</fullName>
        <label>Mailing Address c/o</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalaryPerYearChf__c</fullName>
        <label>Salary Per Year CHF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalaryPerYearEur__c</fullName>
        <label>Salary Per Year EUR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANAnsprechpartner__c</fullName>
        <label>Ansprechpartner ANÜ Abrechnung</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalPhoneNo__c</fullName>
        <label>Additional Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BankAccountHolder__c</fullName>
        <label>Bank Account Holder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionCountry__c</fullName>
        <label>Commission Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Land</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractAddressCo__c</fullName>
        <description>This is the c/o field for the contract address.
Robin S. 19.02.2020</description>
        <label>Contract Address c/o</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestInGermany__c</fullName>
        <label>Interest In Germany</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
                <value>
                    <fullName>Unbekannt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MigrationProtocol__c</fullName>
        <label>Migration Protocol</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <formula>DATEVALUE(   CreatedDate   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedPosition__c</fullName>
        <label>Requested Position</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistenzarzt</fullName>
                </value>
                <value>
                    <fullName>Facharzt</fullName>
                </value>
                <value>
                    <fullName>Oberarzt</fullName>
                </value>
                <value>
                    <fullName>Chefarzt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedWeekdays__c</fullName>
        <label>Requested Weekdays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>alle Wochentage</fullName>
                </value>
                <value>
                    <fullName>Montag</fullName>
                </value>
                <value>
                    <fullName>Dienstag</fullName>
                </value>
                <value>
                    <fullName>Mittwoch</fullName>
                </value>
                <value>
                    <fullName>Donnerstag</fullName>
                </value>
                <value>
                    <fullName>Freitag</fullName>
                </value>
                <value>
                    <fullName>Sonnabend</fullName>
                </value>
                <value>
                    <fullName>Sonntag</fullName>
                </value>
                <value>
                    <fullName>Feiertag</fullName>
                </value>
                <value>
                    <fullName>Schulferien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_portfolio__c</fullName>
        <label>Service portfolio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANÜ caregivers</fullName>
                </value>
                <value>
                    <fullName>ANÜ doctors</fullName>
                </value>
                <value>
                    <fullName>Master Vendor</fullName>
                </value>
                <value>
                    <fullName>OnSite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
                <value>
                    <fullName>PermanentPlacement</fullName>
                    <label>Permanent Placement</label>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAddressCo__c</fullName>
        <description>C/O field for the shipping address.
Robin S. 19.02.2020</description>
        <label>Shipping Address c/o</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Duplicate_Check__c</fullName>
        <description>Ist diese Checkbox aktiviert (manuell), liegt kein Duplikat vor.
Use Case: System erkennt zwei nahezu gleiche Accounts fälschlicherweise als Duplikate. Diese Checkbox bewirkt, dass die Accounts nicht weiter als Duplikate deklariert werden.</description>
        <label>[T]Duplicate Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WritesOwnInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Writes Own Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractPostalCode__c</fullName>
        <description>Postal Code field for the contract address.
Robin S. 19.02.2020</description>
        <label>Postal Code (Contract address)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeactivationReason__c</fullName>
        <label>Deactivation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA Beginner</fullName>
                </value>
                <value>
                    <fullName>Angebot der Festanstellung nicht möglich</fullName>
                </value>
                <value>
                    <fullName>Angebots E-Mail ungenau</fullName>
                </value>
                <value>
                    <fullName>Auf eigenen Wunsch</fullName>
                </value>
                <value>
                    <fullName>Aufgabe Praxisbetrieb</fullName>
                </value>
                <value>
                    <fullName>Betrugsfall</fullName>
                </value>
                <value>
                    <fullName>Duplikat</fullName>
                </value>
                <value>
                    <fullName>Eintrag im Führungszeugnis</fullName>
                </value>
                <value>
                    <fullName>Elternzeit</fullName>
                </value>
                <value>
                    <fullName>Fachliche Ursache</fullName>
                </value>
                <value>
                    <fullName>falsche Kontaktdaten</fullName>
                </value>
                <value>
                    <fullName>Fehlregistrierung</fullName>
                </value>
                <value>
                    <fullName>Festanstellung</fullName>
                </value>
                <value>
                    <fullName>Fusionierung</fullName>
                </value>
                <value>
                    <fullName>Gehaltsvorschlag nicht passend</fullName>
                </value>
                <value>
                    <fullName>Insolvent</fullName>
                </value>
                <value>
                    <fullName>Is looking for an internship</fullName>
                </value>
                <value>
                    <fullName>keine deutsche Anerkennung</fullName>
                </value>
                <value>
                    <fullName>Keine Rückmeldung</fullName>
                </value>
                <value>
                    <fullName>Kein Interesse mehr</fullName>
                </value>
                <value>
                    <fullName>Kündigung</fullName>
                </value>
                <value>
                    <fullName>Looking for training position</fullName>
                </value>
                <value>
                    <fullName>mangelnde Deutschkenntnisse</fullName>
                </value>
                <value>
                    <fullName>No residence in Germany</fullName>
                </value>
                <value>
                    <fullName>Nur 450 €</fullName>
                </value>
                <value>
                    <fullName>Only fee business</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Todesfall</fullName>
                </value>
                <value>
                    <fullName>Umkreis nicht passend</fullName>
                </value>
                <value>
                    <fullName>Unzuverlässigkeit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoctorsSurgeryType__c</fullName>
        <label>Doctors Surgery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einzelpraxis</fullName>
                </value>
                <value>
                    <fullName>Gemeinschaftspraxis</fullName>
                </value>
                <value>
                    <fullName>Medizinisches Versorgungszentrum</fullName>
                </value>
                <value>
                    <fullName>Ambulanz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord_PP_Doctor__c</fullName>
        <label>Landlord PP Doctor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedicalLicenseFrom__c</fullName>
        <label>Medical License From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoQualificationFor__c</fullName>
        <label>No Qualification For</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_branches__c</fullName>
        <label>Number of branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PR_Comment_Doctors__c</fullName>
        <description>Potencial Revenue Comment Doctors</description>
        <label>PR Comment Doctors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeFromLead__c</fullName>
        <label>Record Type From Lead</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue2020Doctors__c</fullName>
        <description>Rollup summarize of all doctor revenues from KPI object for 2020</description>
        <label>Revenue 2020 (doctors)</label>
        <summarizedField>KPI__c.Value_AA__c</summarizedField>
        <summaryFilterItems>
            <field>KPI__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>KPI__c.Category__c</field>
            <operation>equals</operation>
            <value>Umsatz</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>KPI__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>KPI__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>T_AccountDocuments__c</fullName>
        <label>[T]AccountDocuments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Contract_Country__c</fullName>
        <formula>TEXT(ContractCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Contract Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_SalutationHelper__c</fullName>
        <formula>IF( ISPICKVAL(Salutation , &quot;Mr.&quot;) || ISPICKVAL(Salutation , &quot;Herr&quot;), &quot;r&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Salutation Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContinuingEducation__c</fullName>
        <inlineHelpText>Vorträge, Lehrgänge und Fortbildungen, die relevant für die Vermittlung sein könnten - aber NICHT offiziell als Zusatzbezeichnung oder Fachkunde anerkannt sind. (Beispiele: Schiffsarzt, Neuraltherapie, Kardioanästhesie, Taucherarzt…)</inlineHelpText>
        <label>Continuing Education</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GermanLanguageLevel__c</fullName>
        <label>German Language Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Itself__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Entity Itself</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaximumHoursPerWeek__c</fullName>
        <label>Maximum Hours Per Week</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeinDoctari_Account__c</fullName>
        <formula>NOT(ISBLANK(CognitoID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Person registered for MeinDoctari</inlineHelpText>
        <label>MeinDoctari Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResidencePermitANUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residence Permit ANÜ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Operation_Time_CM__c</fullName>
        <label>[T] Operation Time CM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Berlin__c</fullName>
        <label>Landlord Doctor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BelongsToLegalPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Belongs To Legal Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>juristisch verbundene Personen</relationshipLabel>
        <relationshipName>juristisch_verbundene_Personen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoVid_19_Information__c</fullName>
        <label>CoVid-19 Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>antigen test on site</fullName>
                </value>
                <value>
                    <fullName>affidavit of freedom from symptoms</fullName>
                </value>
                <value>
                    <fullName>test certificate by WAZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionPostalCode__c</fullName>
        <label>Commission Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GermanLanguageSkills__c</fullName>
        <label>German Language Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Muttersprachler</fullName>
                </value>
                <value>
                    <fullName>Fliessend</fullName>
                </value>
                <value>
                    <fullName>Gut</fullName>
                </value>
                <value>
                    <fullName>Grundlagen</fullName>
                </value>
                <value>
                    <fullName>Keine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaximumHoursPerMonth__c</fullName>
        <label>Maximum Hours Per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedicalLicenseStatus__c</fullName>
        <label>Medical License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>existing</fullName>
                </value>
                <value>
                    <fullName>existing-from</fullName>
                </value>
                <value>
                    <fullName>non-existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedicalPensionScheme__c</fullName>
        <description>Shows which so called &quot;Versorgungswerk&quot; (Medical Pension Scheme) is taking care of a doctors pension.</description>
        <inlineHelpText>Federal state of the pension fund of which the doctor is a member (or pension exemption if no membership)</inlineHelpText>
        <label>Medical Pension Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dauerhafte Rentenbefreiung</fullName>
                </value>
                <value>
                    <fullName>Baden-Württemberg</fullName>
                </value>
                <value>
                    <fullName>Bayern</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Brandenburg</fullName>
                </value>
                <value>
                    <fullName>Bremen</fullName>
                </value>
                <value>
                    <fullName>Hamburg</fullName>
                </value>
                <value>
                    <fullName>Hessen</fullName>
                </value>
                <value>
                    <fullName>Mecklenburg-Vorpommern</fullName>
                </value>
                <value>
                    <fullName>Niedersachsen</fullName>
                </value>
                <value>
                    <fullName>Nordrhein-Westfalen</fullName>
                </value>
                <value>
                    <fullName>Rheinland-Pfalz</fullName>
                </value>
                <value>
                    <fullName>Saarland</fullName>
                </value>
                <value>
                    <fullName>Sachsen</fullName>
                </value>
                <value>
                    <fullName>Sachsen-Anhalt</fullName>
                </value>
                <value>
                    <fullName>Schleswig-Holstein</fullName>
                </value>
                <value>
                    <fullName>Thüringen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedStateCanton__c</fullName>
        <label>Requested State / Canton</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RequestedStateCanton</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue2020Caregiver__c</fullName>
        <description>Rollup summarize of all caregiver revenues from KPI object for 2020</description>
        <label>Revenue 2020 (caregiver)</label>
        <summarizedField>KPI__c.Value_PK__c</summarizedField>
        <summaryFilterItems>
            <field>KPI__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>KPI__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>KPI__c.Category__c</field>
            <operation>equals</operation>
            <value>Umsatz</value>
        </summaryFilterItems>
        <summaryForeignKey>KPI__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SocialSecurityNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The social security number serves as unique identifies between DATEV and Salesforce. It is currently first entered in DATEV when we receive the personnel questionnaire.</description>
        <externalId>true</externalId>
        <label>Social Security Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StatusEmploymentANUE__c</fullName>
        <label>Status Employment ANÜ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>befristet</fullName>
                </value>
                <value>
                    <fullName>entfristet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths_Weaknesses__c</fullName>
        <label>Strengths/Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TCountContractRollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[T] Count Contract Rollup</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Count</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Hamburg__c</fullName>
        <label>Landlord Caregiver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionAddressMaps__c</fullName>
        <formula>IF(ISBLANK(CommissionStreet__c) == FALSE, IF(ISBLANK(CommissionPostalCode__c) == FALSE, IF(ISBLANK(CommissionPostalCode__c) == FALSE, &quot;https://maps.google.com/?q=&quot;+ SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CommissionStreet__c+&quot;,&quot;+CommissionPostalCode__c+&quot;,&quot;+CommissionCity__c, &apos; &apos;, &apos;+&apos;),&apos;ö&apos;,&apos;oe&apos;),&apos;ä&apos;,&apos;ae&apos;),&apos;ü&apos;,&apos;ue&apos;),&apos;ß&apos;,&apos;ss&apos;),&apos;&apos;),&apos;&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Address Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestInSwitzerland__c</fullName>
        <label>Interest In Switzerland</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
                <value>
                    <fullName>Unbekannt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord_PP_Caregiver__c</fullName>
        <label>Landlord PP Caregiver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Comment_Caregivers__c</fullName>
        <description>Potencial Revenue Comment Caregiver</description>
        <label>PR Comment Caregivers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Comment_PP_Doctors__c</fullName>
        <description>Potencial Revenue Comment Permanent Placements</description>
        <label>PR Comment PP Doctors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedByLastname__c</fullName>
        <label>Recommended By Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentRelationship__c</fullName>
        <formula>IF( ISBLANK(TEXT (StatusEmploymentANUE__c)) , Text(StatusEmploymentFachpflege__c) , Text(StatusEmploymentANUE__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contract_End_Date__c</fullName>
        <description>stores the Last Contract End Date from Business Accounts via Rollup Helper from all Contracts (excl. Logic in RollupHelper)</description>
        <label>Last Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_staff_on_offer__c</fullName>
        <label>Medical staff on offer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>caregiver</fullName>
                </value>
                <value>
                    <fullName>caregiver assistant</fullName>
                </value>
                <value>
                    <fullName>doctors</fullName>
                </value>
                <value>
                    <fullName>other staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecommendedByFirstname__c</fullName>
        <label>Recommended By Firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidencePermitHonorar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residence Permit Honorar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_CurrentUserLandloard__c</fullName>
        <description>SFC-2535</description>
        <formula>IF( OR(($User.FirstName + &apos; &apos; + $User.LastName) = Account_Owner_Hamburg__c, ($User.FirstName + &apos; &apos; + $User.LastName) = Account_Owner_Berlin__c),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Current User Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Years_since_Creation__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Years since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Designations__c</fullName>
        <label>Additional Designations</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooperation_with_InSitu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooperation with InSitu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Comment_PP_Caregiver__c</fullName>
        <label>PR Comment PP Caregiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredStartAtDoctari__c</fullName>
        <label>Preferred Start at doctari</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>startPreference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDateNewLegalEntity__c</fullName>
        <label>Start Date New Legal Entity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Account_Owner_Profile__c</fullName>
        <description>Account Owner Profile Name</description>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner Profile Name</inlineHelpText>
        <label>[T] Account Owner Profile</label>
        <type>Text</type>
    </fields>
</CustomObject>